# cmakeformaksim

./: CMakeLists.txt  inout.h  main.cpp  print.cpp  read.cpp
